# suree

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  rust-toolchain.toml
.github/workflows/: ci.yaml  release.yaml
resource/test/: c_git.yaml  go_cobra_helm.yaml  go_cobra_helm_history.yaml  go_cobra_kubectl.yaml  python_click.yaml  rust_cargo.yaml
src/: cli.rs  display.rs  main.rs  parser.rs  suree.rs
