[package]
name = "suree"
version = "0.0.1"
edition = "2021"
description = "suree - list subcommands in a tree-like format"

[dependencies]
anyhow = "1.0.95"
async-recursion = "1.1.1"
clap = { version = "4.5.26", features = ["derive"] }
futures = "0.3.31"
indextree = "4.7.3"
itertools = "0.14.0"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.43.0", features = ["full"] }
tokio-macros = "2.5.0"
